[^] Render loop for ImGui code working within c++ plugin. Currently crashes, seems to be because the font texture needs to be set up in the C++ side.

--- a/PluginSource/source/UnityImGuiRenderer.vcxproj
+++ b/PluginSource/source/UnityImGuiRenderer.vcxproj
@@ -92,6 +92,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ImGuiDrawData.h" />
+    <ClInclude Include="ImGuiShader.h" />
     <ClInclude Include="PlatformBase.h" />
     <ClInclude Include="RenderAPI.h" />
     <ClInclude Include="Unity\IUnityGraphics.h" />
