[^] Updated ignore. Tried a couple custom UI things.

--- a/UnityImGUI/.gitignore
+++ b/UnityImGUI/.gitignore
@@ -11,6 +11,8 @@ https://github.com/github/gitignore/blob/master/Unity.gitignore
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
+/[Aa]ssets/[Pp]lugins
+/[Aa]ssets/[Pp]lugins.meta
 
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
