--- a/UnityImGUI/imgui.ini
+++ b/UnityImGUI/imgui.ini
@@ -1,15 +1,30 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=761,255
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=240,80
-Size=550,680
+Pos=497,7
+Size=1027,834
 Collapsed=0
 
 [Window][Example: Log]
-Pos=646,20
+Pos=1320,113
 Size=500,400
+Collapsed=0
+
+[Window][TestWidget]
+Pos=259,189
+Size=406,241
+Collapsed=1
+
+[Window][Example: Console]
+Pos=394,105
+Size=520,600
+Collapsed=0
+
+[Window][Horizontal contents size demo window]
+Pos=60,60
+Size=316,268
 Collapsed=0
 
