--- a/PluginSource/source/UnityImGuiRenderer.vcxproj
+++ b/PluginSource/source/UnityImGuiRenderer.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
       <Configuration>Debug</Configuration>
@@ -15,20 +15,20 @@
     <IgnoreWarnCompileDuplicatedFilename>true</IgnoreWarnCompileDuplicatedFilename>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>UnityImGuiRenderer</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -91,6 +91,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Diligent\DiligentCore\Graphics\GraphicsEngineD3D12\CompiledShaders\GenerateMips\GenerateMipsGammaCS.h" />
+    <ClInclude Include="Diligent\DiligentCore\Graphics\GraphicsEngineD3D12\CompiledShaders\GenerateMips\GenerateMipsGammaOddCS.h" />
+    <ClInclude Include="Diligent\DiligentCore\Graphics\GraphicsEngineD3D12\CompiledShaders\GenerateMips\GenerateMipsGammaOddXCS.h" />
+    <ClInclude Include="Diligent\DiligentCore\Graphics\GraphicsEngineD3D12\CompiledShaders\GenerateMips\GenerateMipsGammaOddYCS.h" />
+    <ClInclude Include="Diligent\DiligentCore\Graphics\GraphicsEngineD3D12\CompiledShaders\GenerateMips\GenerateMipsLinearCS.h" />
+    <ClInclude Include="Diligent\DiligentCore\Graphics\GraphicsEngineD3D12\CompiledShaders\GenerateMips\GenerateMipsLinearOddCS.h" />
+    <ClInclude Include="Diligent\DiligentCore\Graphics\GraphicsEngineD3D12\CompiledShaders\GenerateMips\GenerateMipsLinearOddXCS.h" />
+    <ClInclude Include="Diligent\DiligentCore\Graphics\GraphicsEngineD3D12\CompiledShaders\GenerateMips\GenerateMipsLinearOddYCS.h" />
+    <ClInclude Include="Diligent\DiligentCore\ThirdParty\SPIRV-Cross\gitversion.h" />
+    <ClInclude Include="Diligent\DiligentCore\ThirdParty\SPIRV-Tools\DebugInfo.h" />
+    <ClInclude Include="Diligent\Projects\Asteroids\CompiledShaders\asteroid_ps.h" />
+    <ClInclude Include="Diligent\Projects\Asteroids\CompiledShaders\asteroid_ps_d3d11.h" />
+    <ClInclude Include="Diligent\Projects\Asteroids\CompiledShaders\asteroid_ps_diligent.h" />
+    <ClInclude Include="Diligent\Projects\Asteroids\CompiledShaders\asteroid_vs.h" />
+    <ClInclude Include="Diligent\Projects\Asteroids\CompiledShaders\asteroid_vs_diligent.h" />
+    <ClInclude Include="Diligent\Projects\Asteroids\CompiledShaders\font_ps.h" />
+    <ClInclude Include="Diligent\Projects\Asteroids\CompiledShaders\skybox_ps.h" />
+    <ClInclude Include="Diligent\Projects\Asteroids\CompiledShaders\skybox_vs.h" />
+    <ClInclude Include="Diligent\Projects\Asteroids\CompiledShaders\sprite_ps.h" />
+    <ClInclude Include="Diligent\Projects\Asteroids\CompiledShaders\sprite_vs.h" />
     <ClInclude Include="ImGuiDrawData.h" />
     <ClInclude Include="ImGuiShader.h" />
     <ClInclude Include="PlatformBase.h" />
