Moved demo window out of the controller. Set order of Controller so that controller.Update() always happens before users ImGUI windows. Added two demo scenes. One with the DearImGUI demo window, and another with a colour picker for the camera background.

--- a/UnityImGUI/imgui.ini
+++ b/UnityImGUI/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=359,90
+Pos=130,2
 Size=550,680
 Collapsed=0
 
@@ -36,5 +36,10 @@ Collapsed=0
 [Window][Example: Console]
 Pos=865,154
 Size=520,600
+Collapsed=0
+
+[Window][TestWidget]
+Pos=421,55
+Size=472,531
 Collapsed=0
 
