Fix for the memory leak

--- a/UnityImGUI/imgui.ini
+++ b/UnityImGUI/imgui.ini
@@ -43,3 +43,503 @@ Pos=316,15
 Size=472,531
 Collapsed=0
 
+[Window][0]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][1]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][2]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][3]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][4]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][5]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][6]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][7]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][8]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][9]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][10]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][11]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][12]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][13]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][14]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][15]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][16]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][17]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][18]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][19]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][20]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][21]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][22]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][23]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][24]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][25]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][26]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][27]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][28]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][29]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][30]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][31]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][32]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][33]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][34]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][35]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][36]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][37]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][38]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][39]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][40]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][41]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][42]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][43]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][44]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][45]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][46]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][47]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][48]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][49]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][50]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][51]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][52]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][53]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][54]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][55]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][56]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][57]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][58]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][59]
+Pos=521,112
+Size=80,54
+Collapsed=0
+
+[Window][60]
+Pos=356,83
+Size=80,54
+Collapsed=0
+
+[Window][61]
+Pos=500,111
+Size=80,54
+Collapsed=0
+
+[Window][62]
+Pos=244,72
+Size=80,54
+Collapsed=0
+
+[Window][63]
+Pos=256,81
+Size=80,54
+Collapsed=0
+
+[Window][64]
+Pos=216,80
+Size=80,54
+Collapsed=0
+
+[Window][65]
+Pos=171,78
+Size=80,54
+Collapsed=0
+
+[Window][66]
+Pos=240,98
+Size=80,54
+Collapsed=0
+
+[Window][67]
+Pos=207,94
+Size=80,54
+Collapsed=0
+
+[Window][68]
+Pos=215,84
+Size=80,54
+Collapsed=0
+
+[Window][69]
+Pos=203,109
+Size=80,54
+Collapsed=0
+
+[Window][70]
+Pos=157,122
+Size=80,54
+Collapsed=0
+
+[Window][71]
+Pos=147,139
+Size=80,54
+Collapsed=0
+
+[Window][72]
+Pos=253,243
+Size=80,54
+Collapsed=0
+
+[Window][73]
+Pos=297,334
+Size=80,54
+Collapsed=0
+
+[Window][74]
+Pos=312,439
+Size=80,54
+Collapsed=0
+
+[Window][75]
+Pos=216,501
+Size=80,54
+Collapsed=0
+
+[Window][76]
+Pos=719,464
+Size=80,54
+Collapsed=0
+
+[Window][77]
+Pos=665,218
+Size=80,54
+Collapsed=0
+
+[Window][78]
+Pos=519,326
+Size=80,54
+Collapsed=0
+
+[Window][79]
+Pos=336,223
+Size=80,54
+Collapsed=0
+
+[Window][80]
+Pos=291,294
+Size=80,54
+Collapsed=0
+
+[Window][81]
+Pos=157,300
+Size=80,54
+Collapsed=0
+
+[Window][82]
+Pos=96,299
+Size=80,54
+Collapsed=0
+
+[Window][83]
+Pos=47,177
+Size=80,54
+Collapsed=0
+
+[Window][84]
+Pos=152,113
+Size=80,54
+Collapsed=0
+
+[Window][85]
+Pos=687,70
+Size=80,54
+Collapsed=0
+
+[Window][86]
+Pos=685,167
+Size=80,54
+Collapsed=0
+
+[Window][87]
+Pos=425,193
+Size=80,54
+Collapsed=0
+
+[Window][88]
+Pos=312,66
+Size=80,54
+Collapsed=0
+
+[Window][89]
+Pos=409,291
+Size=80,54
+Collapsed=0
+
+[Window][90]
+Pos=329,384
+Size=80,54
+Collapsed=0
+
+[Window][91]
+Pos=529,345
+Size=80,54
+Collapsed=0
+
+[Window][92]
+Pos=567,214
+Size=80,54
+Collapsed=0
+
+[Window][93]
+Pos=479,89
+Size=80,54
+Collapsed=0
+
+[Window][94]
+Pos=123,211
+Size=80,54
+Collapsed=0
+
+[Window][95]
+Pos=13,307
+Size=80,54
+Collapsed=0
+
+[Window][96]
+Pos=160,61
+Size=80,54
+Collapsed=0
+
+[Window][99]
+Pos=315,156
+Size=80,54
+Collapsed=0
+
+[Window][98]
+Pos=239,162
+Size=80,54
+Collapsed=0
+
+[Window][97]
+Pos=211,271
+Size=80,54
+Collapsed=0
+
